appId: com.gdavidpb.tuindice.debug
---
- runFlow: ../_shared/launch-clean.yaml
- tapOn:
    id: auth_usb_id_text_field
- inputText: "4444444"
- inputText: "4"
- tapOn:
    id: auth_password_text_field
- inputText: "outdated-pass"
- tapOn:
    id: auth_keyboard_dismiss_area
- tapOn:
    id: auth_sign_in_button
- runFlow: ../_shared/continue-to-summary-after-auth.yaml
- extendedWaitUntil:
    visible:
      id: summary_status_icon_button
    timeout: 20000
- tapOn:
    id: summary_status_icon_button
- extendedWaitUntil:
    visible:
      id: summary_sync_status_message
    timeout: 10000
- tapOn:
    id: base_confirmation_dialog_positive_button
- extendedWaitUntil:
    visible:
      id: auth_update_password_idle_container
    timeout: 20000
- tapOn:
    id: base_confirmation_dialog_negative_button
- extendedWaitUntil:
    visible:
      id: summary_content_container
    timeout: 10000
