appId: com.gdavidpb.tuindice.debug
---
- runFlow: ../_shared/launch-clean.yaml
- runFlow: login-summary-ready.yaml
- tapOn:
    id: base_top_app_bar_action_sign_out
- extendedWaitUntil:
    visible:
      id: auth_sign_out_message_text
    timeout: 10000
- tapOn:
    id: base_confirmation_dialog_negative_button
- extendedWaitUntil:
    notVisible:
      id: base_confirmation_dialog_sheet
    timeout: 10000
- assertVisible:
    id: summary_content_container
